Edit table in table-practice.html for Release 1

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -8,22 +8,34 @@
 <tr>
   <th>Honda</th>
   <th>Toyota</th>
+  <th>Subaru</th>
   <th>Nissan</th>
+  <th>Tesla</th>
 </tr>
 <tr>
   <td>Fit</td>
   <td>Yaris</td>
+  <td rowspan="2">Impreza RS</td>
   <td>Versa</td>
+  <td>Model 3</td>
 </tr>
 <tr>
   <td>Civic</td>
   <td>Corolla</td>
   <td>Altima</td>
+  <td rowspan="2">Model X</td>
 </tr>
 <tr>
   <td>Accord</td>
   <td>Camry</td>
+  <td>Impreza WRX/STI</td>
   <td>Maxima</td>
+</tr>
+<tr>
+  <td>S2000</td>
+  <td colspan="2">FR-S/BRZ</td>
+  <td>350Z</td>
+  <td>Model S</td>
 </tr>
 </body>
 </html>
