--- a/css/css-demo/index.html
+++ b/css/css-demo/index.html
@@ -6,6 +6,7 @@
   <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="styles/elegant-styles.css" type="text/css"/>
   <link rel="stylesheet" href="styles/fixed-contact.css" type="text/css"/>
+  <link rel="stylesheet" href="practice.css" type="text/css">
 </head>
 <body>
   <h1 id="resume-title">Resume for Imogen Ary-Perrson</h1>
@@ -23,7 +24,7 @@
     <h2 class="experience-category">Relevant Work Experience</h2>
     <section class="job">
       <h3>General Practitioner, The Circus</h3>
-      <ul>
+      <ul class="list">
         <li>Wrangled flaming hula hoops</li>
         <li>Served as first assistant to trapeze team</li>
         <li class="featured">Provided quality assurance for cotton candy</li>
