--- a/css/css-demo/index.html
+++ b/css/css-demo/index.html
@@ -16,7 +16,7 @@
   </section>
   <section id="contact-info">
     <p>287-187-3726</p>
-    <p>imoganary@gmail.com</p>
+    <a href="#">imoganary@gmail.com</a>
     <p>123 Main Street, Anytown, USA 101010</p>
   </section>
 
@@ -32,7 +32,7 @@
     </section>
     <section class="job">
       <h3>Wildlife Wrangler, The Zoo</h3>
-      <ul>
+      <ul class="list">
         <li>Trained entire dancing seal troupe</li>
         <li>Regularly chased down escaped tigers</li>
         <li class="featured">Saved a small child from a hungry horse</li>
@@ -40,7 +40,7 @@
     </section>
     <section class="job">
       <h3>Cone Dipper, Imogen's Ice Cream Shack</h3>
-      <ul>
+      <ul class="list">
         <li>Dipped ice cream cones in flavored wax</li>
         <li class="featured">Was employee of the month 12 times a year</li>
         <li>Was the only employee</li>
@@ -52,7 +52,7 @@
     <h2 class="experience-category">Volunteer Experience</h1>
     <section class="volunteer-gig">
       <h3>Little League Coach</h3>
-      <ul>
+      <ul class="list">
         <li>Led team of middle-schoolers to intense championship triumph</li>
         <li>Drove bus to Imogen's Ice Cream Shack after games</li>
       </ul>
