--- a/css/positioning/octopus.html
+++ b/css/positioning/octopus.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <title>Dress the Octopus</title>
+  <link href='octopus.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <img src="hat.png"/>
-  <img src="glasses.png"/>
-  <img src="octopus.png"/>
+  <div class="container">
+    <img class="octopus" src="octopus.png"/>
+    <img class="glasses" src="glasses.png"/>
+    <img class="hat" src="hat.png"/>
+  </div>
 </body>
 </html>
